# ocl-stat

./: .gitignore  Makefile  README.md  meson.build  ocl-stat.c  stat-test.c
